# GausAlgo

./: Cargo.toml  README.md  index.html  styles.css
src/: app.rs  gauss.rs  main.rs  parser.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gauss.rs  lib.rs  main.rs  parser.rs  rational.rs
